2020-06-29  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (geneCSdata2): modified
	to avoid round-off error at thermal energy when this data point is given in input

2020-06-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* manual/processing.html (DeCE: processing): new file
	pointwise and group commands

	* source/deceprocpointwise.cpp: updated
	production of pointwise cross sections stabilized
	develop branch only

	* source/deceprocgroup.cpp: new file
	calculate group average
	develop branch only
	
	* source/groupstructure.h: new file
	define group cross section structure, currently SAND-IIa and LANL70
	develop branch only

2020-06-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (geneCSdata2): bug fixed
	data reading for no-resonance region case fixed
	there are more modifications to this file

2020-06-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: updated
	version 1.2.4 Olivine

	* source/decetable34.cpp (DeceTableMF34): modified
	print covariance matrix instead of correlation when different L-values are given
	still not sure if they are symmetric

	* source/endflib.cpp (ENDFDelExp): updated
	print big number (> 1e+10)

2020-06-18  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable32.cpp: updated
	* source/decetable.cpp: updated
	all the decetableNN.cpp files, esp. decetable32, modified to print more information

	* source/endfio.cpp (ENDFPrintLIST): updated
	(ENDFPrint1Dim): updated
	can take X and Y axis names

2020-06-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* example/example3.cpp: updated
	another case, where all the data are once stored in memory, is added

2020-06-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* manual/header.html: updated
	* manual/input.html: updated
	manual updated to include editheader

	* test/decetest.sh: updated
	* test/input/input18.dece: new file
	new test input #18 for header manipulation added

	* source/endfio.cpp (ENDFReadMF32): updated
	* source/decetable32.cpp: updated