@@ -14,7 +14,7 @@
 <img src="DeCE.png" width="340" height="320" alt="DeCE Logo" title="DeCE" style="margin-top:20px;margin-bottom:20px;padding:0px;"/>
 </p>
 
-<p style="text-align:center;"> June, 2020 </p>
+<p style="text-align:center;"> July, 2020 </p>
 <p style="text-align:right;"> Kawano Toshihiko </p>
 <p style="text-align:right;"> Los Alamos National Laboratory </p>
 
@@ -113,6 +113,8 @@
              addpoint (add one data point) </a>
         <li> <a href="ope3.html#delpoint">
              delpoint (delete one data point, or multiple points) </a>
+        <li> <a href="ope3.html#modpoint">
+             modpoint (update one data point by input)</a>
         <li> <a href="ope3.html#factor">
              factor (multiply data points by a factor)</a>
         <li> <a href="ope3.html#applyfunc">
@@ -129,8 +131,8 @@
         <ul>
         <li> <a href="ope3.html#boundcorrect">
              boundcorrect (fix boundary energy) </a>
-        <li> <a href="ope3.html#duplicatepoint">
-             duplicatepoint (repeat the highest point data) </a>
+        <li> <a href="ope3.html#genprod">
+             genprod (generate particle production cross section in MF3) </a>
         </ul>
     <li> <a href="resonance.html">
          Resonance Range  </a>
